public/css/styles.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  font-family: Arial, Helvetica, sans-serif;
  /* overflow: hidden; */
}

video {
  display: flex;
  object-fit: cover;
  height: 45vw;
  width: 100vw;
  margin-top: 10px;
}

.Header {
  display: flex;
  height: 60px;
  width: 90vw;
}

.mainIndexLi {
  margin: 0 25px;
  font-weight: 600;
  color: #039be5;
  height: 20px;
}

.gfLogo {
  height: 50px;
  width: 50px;
  margin: 5px auto 0 10px;
}

nav {
  background-color: white;
  margin-bottom: 10px;
}

.li {
  margin-top: 35px;
}

/* Recipe Index Page */

.allRecipes {
  display: flex;
}

.showRecipes {
  border: 4px solid #91c54c;
  border-radius: 10px;
  height: 200px;
  width: 400px;
  color: #039be5;
}

button {
  justify-content: center;
}

.buttonText {
  color: white;
  font-weight: 700;
}

/* Show Page */

